--- a/model.ipynb
+++ b/model.ipynb
@@ -138,25 +138,18 @@
    },
    "outputs": [],
    "source": [
+    "#import package\n",
+    "import NestedSampling_DMD as dmd\n",
+    "from unittest import TestCase\n",
+    "from package_example.data_io import get_example_data_file_path, load_data\n",
+    "import pandas as  pd\n",
     "\n",
-    "\n",
-    "\n",
-    "# data_x =  distance to the center of the galaxy \n",
-    "data_x = np.array([10.5,11.44,12.51,13.53,14.59,16.05,18.64,26.3,28.26,29.51,\n",
-    "32.04,33.99,36.49,38.41,40.42,42.4,44.49,\n",
-    "45.99,48.06,49.49,51.39,53.89,56.89,57.98,60.92,64.73,69.31,72.96,76.95,81.13,84.9,89.35,92.44,\n",
-    "97.41,100.72,106.77,119.98,189.49])\n",
-    "\n",
-    "# data_y  =  ratational velocity\n",
-    "data_y = np.array([249.72,261.96,\n",
-    "284.3,271.54,251.43,320.7,286.46,189.64,237.99,209.82,179.14,170.37,175.92,191.57,197.59,192.79,\n",
-    "213.22,179.39,213.03,178.57,183.31,157.89,191.76,210.72,168.02,206.47,203.62,190.53,222.72,186.29,122.25,\n",
-    "143.95,154.66,184,108.68,137.15,150.18,125.01])\n",
-    "\n",
-    "# data_yerr  =  the error of ratational velocity \n",
-    "data_yerr = np.array([13.44,11.71,17.5,15.57,25.6,\n",
-    "25.27,101.18,6.74,11.54,9.16,6.65,6.93,6.62,11.73,14.12,5.92,17.17,11.23,24.72,17.63,23.58,\n",
-    "19.57,24.35,29.81,25.67,36.27,40.89,40.98,74.37,66.53,36.46,29.49,67.23,72.86,40.99,53.17,25.46,37.32])"
+    "#import data\n",
+    "directory='./example_data.txt'\n",
+    "data = load_data(get_example_data_file_path('example_data.txt'))\n",
+    "data_x =[]\n",
+    "data_y = []\n",
+    "data_yerr= []"
    ]
   },
   {
