--- a/model.ipynb
+++ b/model.ipynb
@@ -145,11 +145,11 @@
     "import pandas as  pd\n",
     "\n",
     "#import data\n",
-    "directory='./example_data.txt'\n",
-    "data = load_data(get_example_data_file_path('example_data.txt'))\n",
-    "data_x =[]\n",
-    "data_y = []\n",
-    "data_yerr= []"
+    "data_file = iof.get_data_file_path('example_data.txt')\n",
+    "data_table = iof.load_data(data_file)\n",
+    "data_x =data_table.r\n",
+    "data_y =data_table.v\n",
+    "data_yerr=data_table.dv"
    ]
   },
   {
