--- a/model.ipynb
+++ b/model.ipynb
@@ -141,12 +141,12 @@
     "#import package\n",
     "import NestedSampling_DMD as dmd\n",
     "from unittest import TestCase\n",
-    "from package_example.data_io import get_example_data_file_path, load_data\n",
+    "import data_io.py \n",
     "import pandas as  pd\n",
     "\n",
     "#import data\n",
-    "data_file = iof.get_data_file_path('example_data.txt')\n",
-    "data_table = iof.load_data(data_file)\n",
+    "data_file = get_data_file_path('example_data.txt')\n",
+    "data_table = load_data(data_file)\n",
     "data_x =data_table.r\n",
     "data_y =data_table.v\n",
     "data_yerr=data_table.dv"
