--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -72,12 +72,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "a=np.ones((2,3))\n",
+    "a[1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    def test_model_NFW(self):\n",
+    "        \n",
+    "        theta_range = np.linspace(0.1,0.1,3.1)\n",
+    "        x_range  = np.linspace(50,10,350)\n",
+    "        vrot = ones((len(theta_range),len(x_range))\n",
+    "                    \n",
+    "                    \n",
+    "        for i in range(len(theta_range)):\n",
+    "            for j in rannge(len(x_range)):\n",
+    "                \n",
+    "                vrot[i][j]=model.model_NFW(theta_range[i],x_range[j])\n",
+    "                    \n",
+    "                    \n",
+    "        self.assertTrue(np.argmax(vrot)>0 and np.argmax(vrot) <1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    def test_loglike_NFW(self):\n",
+    "                \n",
+    "        theta0_range = np.linspace(0,0.1,3)\n",
+    "        theta1_range = np.linspace(0,0.1,3)\n",
+    "        \n",
+    "        minusChiSq=np.ones((len(theta0_range),len(theta1_range)))\n",
+    "\n",
+    "\n",
+    "        for i in range(len(theta0_range)):\n",
+    "            for j in range(len(theta1_range)):\n",
+    "                \n",
+    "                theta = theta0_range, theta1_range \n",
+    "                minusChiSq[i,j] = model.loglike_NFW(theta)\n",
+    "                \n",
+    "        self.assertTrue(np.argmax(minusChiSq)<0)        \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
