--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -102,31 +102,29 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "    def test_model_NFW(self):\n",
-    "        \n",
-    "        theta_range = np.linspace(0.1,0.1,3.1)\n",
-    "        x_range  = np.linspace(50,10,350)\n",
-    "        vrot = ones((len(theta_range),len(x_range))\n",
-    "                    \n",
-    "                    \n",
-    "        for i in range(len(theta_range)):\n",
-    "            for j in rannge(len(x_range)):\n",
-    "                \n",
-    "                vrot[i][j]=model.model_NFW(theta_range[i],x_range[j])\n",
-    "                    \n",
-    "                    \n",
-    "        self.assertTrue(np.argmax(vrot)>0 and np.argmax(vrot) <1000)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3025850929940459"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(10)"
+   ]
   },
   {
    "cell_type": "code",
