--- a/model.ipynb
+++ b/model.ipynb
@@ -675,6 +675,42 @@
    "source": [
     "Therefore, model works as intended "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (2) test model in terminal by running \"nosetests textdmdcode.py\"\n",
+    "\n",
+    "run test code in terminal and get the output as following"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"\n",
+    "\n",
+    "Junes-MacBook:NestedSampling_DMD june$ nosetests textdmdcode.py\n",
+    "...\n",
+    "----------------------------------------------------------------------\n",
+    "Ran 3 tests in 0.004s\n",
+    "\n",
+    "OK\n",
+    "Junes-MacBook:NestedSampling_DMD june$\n",
+    "    \n",
+    "    \n",
+    "''"
+   ]
   }
  ],
  "metadata": {
