new file updates

--- a/model0425.ipynb
+++ b/model0425.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +112,12 @@
     "\n",
     "import corner\n",
     "\n",
-    "from scipy.integrate import quad"
+    "from scipy.integrate import quad\n",
+    "\n",
+    "from nsdmd import model \n",
+    "from nsdmd import io\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -180,6 +185,45 @@
     "data_yerr_ref2 = np.array([7.79,7.97,10.1,8.43,6.87,8.38,12,16.6,13,9.65,15.8,24.2,\n",
     "                           35.2,49.6,49.9,54.5,64.7,59.9,70.6,75.1,64.5,56.3,49.6,58.2,64.1,64.2,110])\n",
     "#                           80.9,84.8,85.2,87.4,101,96.1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 223.11,  247.88,  253.14,  267.8 ,  270.52,  270.95,  235.58,\n",
+       "        249.72,  261.96,  284.3 ,  271.54,  251.43,  320.7 ,  286.46,\n",
+       "        189.64,  237.99,  209.82,  179.14,  170.37,  175.92,  191.57,\n",
+       "        197.59,  192.79,  213.22,  179.39,  213.03,  178.57,  183.31,\n",
+       "        157.89,  191.76,  210.72,  168.02,  206.47,  203.62,  190.53,\n",
+       "        222.72,  186.29,  122.25,  143.95,  154.66,  184.  ,  108.68,\n",
+       "        137.15,  150.18,  125.01])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_x_ref1,data_xerr_ref2,data_y_ref1,data_yerr_ref1 =io.load_data('dataref1.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data_x_ref2,data_xerr_ref2,data_y_ref2,data_yerr_ref2 =io.load_data('dataref2.txt')"
    ]
   },
   {
