new file updates

--- a/model0425.ipynb
+++ b/model0425.ipynb
@@ -189,30 +189,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 223.11,  247.88,  253.14,  267.8 ,  270.52,  270.95,  235.58,\n",
-       "        249.72,  261.96,  284.3 ,  271.54,  251.43,  320.7 ,  286.46,\n",
-       "        189.64,  237.99,  209.82,  179.14,  170.37,  175.92,  191.57,\n",
-       "        197.59,  192.79,  213.22,  179.39,  213.03,  178.57,  183.31,\n",
-       "        157.89,  191.76,  210.72,  168.02,  206.47,  203.62,  190.53,\n",
-       "        222.72,  186.29,  122.25,  143.95,  154.66,  184.  ,  108.68,\n",
-       "        137.15,  150.18,  125.01])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "module 'nsdmd.io' has no attribute 'load_data2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-9a6fcaa02cde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdata_x_ref1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_xerr_ref2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_y_ref1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_yerr_ref1\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dataref1.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdata_x_ref2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_xerr_ref2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_y_ref2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_yerr_ref2\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_data2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dataref2.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdata_xerr_ref2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'nsdmd.io' has no attribute 'load_data2'"
+     ]
     }
    ],
    "source": [
-    "data_x_ref1,data_xerr_ref2,data_y_ref1,data_yerr_ref1 =io.load_data('dataref1.txt')"
+    "data_x_ref1,data_xerr_ref2,data_y_ref1,data_yerr_ref1 =io.load_data('dataref1.txt')\n",
+    "data_x_ref2,data_xerr_ref2,data_y_ref2,data_yerr_ref2 =io.load_data2('dataref2.txt')\n",
+    "data_xerr_ref2"
    ]
   },
   {
@@ -222,9 +219,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "data_x_ref2,data_xerr_ref2,data_y_ref2,data_yerr_ref2 =io.load_data('dataref2.txt')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
