--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Due to a tech issue we exprienced previously, we haven't quite finished the turorial file editing yet ... \n",
     "Basically, the only thing left is to change data input method. \n",
-    "### It will be done in the next hour.  Sorry ... & thank you "
+    "### It will be done in the next 15mins,Sorry ... & thank you "
    ]
   },
   {
