--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -71,19 +71,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "  #  !!!! pip install nestle  (from terminal)\n",
-    "    \n",
-    "# !conda install -y -c conda-forge nestle (somehow couldn't find nestle)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": true
@@ -93,18 +80,12 @@
     "import numpy as np\n",
     "import nestle\n",
     "import math\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
-    "\n",
     "import corner\n",
-    "\n",
     "from scipy.integrate import quad\n",
-    "\n",
-    "from nsdmd import model \n",
-    "from nsdmd import io\n",
-    "\n",
-    "import pandas as pd\n"
+    "import nsdmd\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -128,11 +109,9 @@
     "# Reference 1: Bhattacharjee et. al.\n",
     "# Reference 2: Sofue\n",
     "\n",
-    "\n",
-    "    \n",
     "#load data\n",
-    "data_x_ref1,data_xerr_ref2,data_y_ref1,data_yerr_ref1 =io.load_data('dataref1.txt')\n",
-    "data_x_ref2,data_xerr_ref2,data_y_ref2,data_yerr_ref2 =io.load_data2('dataref2.txt')"
+    "data_x_ref1,data_xerr_ref2,data_y_ref1,data_yerr_ref1 =nsdmd.load_data('dataref1.txt')\n",
+    "data_x_ref2,data_xerr_ref2,data_y_ref2,data_yerr_ref2 =nsdmd.load_data2('dataref2.txt')"
    ]
   },
   {
