--- a/trash .ipynb
+++ b/trash .ipynb
@@ -23,14 +23,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The function runs nested sampling. The function can be run on 4 different models. The user just needs to specify the model's loglikelihood and prior. Detailed input example is shown in the bottom. \n",
-      "    \n",
+      "The function runs nested sampling. The function can be run on 4 different models. The user just needs to specify the model's loglikelihood and prior. \n",
+      "----------    \n",
       "The following input parameters are required:\n",
       "    \n",
-      "loglike_model: function calculates likelihood. The name of the loglike_model needs to be specified. [The name options are discussed in below]  \n",
-      "prior_transform_model: function calculates the prior. The name of the prior transformation function needs to be specified. [The name options are discussed in below]  \n",
+      "loglike_model: function calculates likelihood. The name of the loglike_model needs to be specified. \n",
+      "prior_transform_model: function calculates the prior. The name of the prior transformation function needs to be specified. \n",
       "datafile: datafile with format has been discussed in above. \n",
-      "priorRange: an array which specifies the limits of unifrom prior for different parameters eg: priorRange =[rangeForTheta[0],rangeForTheta[1],...] Different models take in different length of priorRange. [The priorRange options are discussed in below.]  \n",
+      "priorRange: an array which specifies the limits of unifrom prior for different parameters eg: priorRange =[rangeForTheta[0],rangeForTheta[1],...]\n",
       "  \n",
       "----------\n",
       "Here are some example commands for running the fuction for 4 different models.    \n",
@@ -39,14 +39,9 @@
       "    model.sample (model.loglike_ISO, model.prior_transform_ISO, 'dataref1.txt',[10,10E10])\n",
       "    model.sample (model.loglike_Einasto, model.prior_transform_Einasto, 'dataref1.txt',[10,10,10E10])\n",
       "    model.sample (model.loglike_GeneralizedHalo, model.prior_transform_GeneralizedHalo, 'dataref1.txt',[5.,10.,4.,1.5,5E8])\n",
+      "-----------\n",
       "    \n",
-      "    \n",
-      "    \n",
-      "    loglike_model : \n",
-      "    prior_transform_model:   \n",
-      "    datafile: data file which has four colums: r(the galactocentric radius[kpc] ),dr(the error of galactocentric radius[kpc])                 ,v(the rotational velocits [km/s]), dv(the error of the rotational velocits [km/s])\n",
-      "    prior range : \n",
-      "    \n",
+      " \n",
       "    \n"
      ]
     }
