--- a/model.ipynb
+++ b/model.ipynb
@@ -19,11 +19,23 @@
    "metadata": {},
    "source": [
     "### Model\n",
-    "Model \n",
+    "The model does Bayesian inference on dark matter density file. \n",
     "\n",
     "$ M $ = The rotational curve calculated with the existence of dark matter and the dark matter density is given by the density profile. We have four dark matter density files and give us 4 models to compare. \n",
     "\n",
-    "The posterior distribution is calculated as, $ p(M|D,I) = \\frac{p(M|I) p(D|M, I)}{p(D|I)} $"
+    "$I$ = prior information. Note that we set priors for all unknown parameters in density file. \n",
+    "\n",
+    "$D$ = measured rotational velocity data \n",
+    "\n",
+    "The posterior distribution is calculated as, $ p(M|D,I) = \\frac{p(M|I) p(D|M, I)}{p(D|I)} $\n",
+    "\n",
+    "$  p(D|M, I) $ : likelihood function \n",
+    "\n",
+    "$ p(M|I)  $ : prior probability \n",
+    "\n",
+    "$ p(M|D,I)  $ : posterior probability \n",
+    "\n",
+    "$ p(D|I) $ : normalization factor "
    ]
   },
   {
@@ -137,13 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to define the data for two references:\n",
-    "\n",
-    "Reference 1: Bhattacharjee et. al.\n",
-    "\n",
-    "Reference 2: Sofue \n",
-    "\n",
-    "The data will be used in this project is the measured rotational speed of the interstellar medium in our local galaxy, as shown in the following figure. "
+    "The data will be used in this project is the measured rotational speed of the interstellar medium in our local galaxy, as shown in the following figure. The data used in this notebook is from reference 2. "
    ]
   },
   {
