--- a/model.ipynb
+++ b/model.ipynb
@@ -18,35 +18,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model\n",
-    "The model does Bayesian inference on dark matter density file. \n",
-    "\n",
-    "$ M $ = The rotational curve calculated with the existence of dark matter and the dark matter density is given by the density profile. We have four dark matter density files and give us 4 models to compare. \n",
-    "\n",
-    "$I$ = prior information. Note that we set priors for all unknown parameters in density file. \n",
-    "\n",
-    "$D$ = measured rotational velocity data \n",
-    "\n",
-    "The posterior distribution is calculated as, $ p(M|D,I) = \\frac{p(M|I) p(D|M, I)}{p(D|I)} $\n",
-    "\n",
-    "$  p(D|M, I) $ : likelihood function \n",
-    "\n",
-    "$ p(M|I)  $ : prior probability \n",
-    "\n",
-    "$ p(M|D,I)  $ : posterior probability \n",
-    "\n",
-    "$ p(D|I) $ : normalization factor "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "\n",
     "\n",
-    "### The four Dark Matter density profiles models: \n",
+    "## The four Dark Matter density profiles models: \n",
     "\n",
-    "Note that\n",
     "\n",
     "r: galactocentric radius\n",
     "\n",
@@ -89,7 +64,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can calcuate rotational curve from Dark Matter density profiles, by assuming dark matter distribution is spherically symmetric"
+    "## Model\n",
+    "The generative model does Bayesian inference on dark matter density file and it returns posterior probability (of unknown parameters).\n",
+    "\n",
+    "\n",
+    "\n",
+    "$ M $ = The rotational curve calculated with the existence of dark matter and the dark matter density is given by the density profile. We have four dark matter density files and give us 4 models to compare. \n",
+    "\n",
+    "$I$ = prior information. Note that we set priors for all unknown parameters in density file. \n",
+    "\n",
+    "$D$ = measured rotational velocity data \n",
+    "\n",
+    "The posterior distribution is calculated as, $ p(M|D,I) = \\frac{p(M|I) p(D|M, I)}{p(D|I)} $\n",
+    "\n",
+    "$  p(D|M, I) $ : likelihood function \n",
+    "\n",
+    "$ p(M|I)  $ : prior probability \n",
+    "\n",
+    "$ p(M|D,I)  $ : posterior probability (of unknown parameters)\n",
+    "\n",
+    "$ p(D|I) $ : normalization factor "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### log likelihood \n",
+    "\n",
+    "The log likelihood is meant to capture how well a model is able to reproduce the data that it is meant to simulate. The loglikelihood function the genrative model is calculated by, \n",
+    "\n",
+    "$log p(D|M, I) = constant* \\prod_{i}^{} log(\\sigma_i)  \\sum_{i}{}(\\frac{(v_{icalculated} - v_{imeasured})^2}{2 \\sigma_i^2}) $\n",
+    "\n",
+    "$constant* \\prod_{i}^{} log(\\sigma_i)  $  Note that this part doesn't matter much since they are the same for all.\n",
+    "\n",
+    "Therefore, the loglikelihood function: $log p(D|M, I) =  \\sum_{i}{}(\\frac{(v_{icalculated} - v_{imeasured})^2}{2 \\sigma_i^2}) $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### prior \n",
+    "\n",
+    "We choose to use uniform priors and we limit the range of the priors. For example, in NFW model, there are one unknown parameter a and one normalization parameter. The choosen priors for a and normalization parameters are uniform prior in [0,10] and [0,10e10], respectively. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotational curve calculated by obtained density model\n",
+    "After getting the f\n",
+    "We can calcuate rotational curve from Dark Matter density profiles, by assuming dark matter distribution is spherically symmetric"
    ]
   },
   {
