--- a/model.ipynb
+++ b/model.ipynb
@@ -114,9 +114,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rotational curve calculated by obtained density model\n",
-    "After getting the f\n",
-    "We can calcuate rotational curve from Dark Matter density profiles, by assuming dark matter distribution is spherically symmetric"
+    "### Sampling \n",
+    "Then we use nested sampling method to do bayesian inference, get the parameter estimation and the log evidence. \n",
+    "\n",
+    "Nested Sampling is a computational approach for integrating posterior\n",
+    "probability in order to compare models in Bayesian statistics. It is similar\n",
+    "to Markov Chain Monte Carlo (MCMC) in that it generates samples that can be\n",
+    "used to estimate the posterior probability distribution. Unlike MCMC, the\n",
+    "nature of the sampling also allows one to calculate the integral of the\n",
+    "distribution. \n",
+    "\n",
+    "\n",
+    "The reason Nested Sampling is more appropriate for this project than MCMC is\n",
+    "Nested Sampling has the advantage that it calculates the evidence (integral\n",
+    "of the posterior) and this way you can compare different models. It is good\n",
+    "for sampling posterior distributions with strong dependence between\n",
+    "variables. Another advantage of Nested Sampling is that you don’t have to\n",
+    "know where MLE is, while using MCMC we would have to normalize to compare\n",
+    "our models since our models have different number of degrees of freedom. \n",
+    "\n",
+    "For more information, see the Nestle package documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotational curve calculation by obtained density model\n",
+    "After getting the fitting parameters, we can calcuate rotational curve from Dark Matter density profiles. Note that we assuming dark matter distribution is spherically symmetric. The velocity is calculated by the following equation. "
    ]
   },
   {
